welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:8: error: ')' expected but ';' found.
	2 * biscuits = caseOrange + 1;)
                                     ^RunHalf:8: error: illegal start of statement
	2 * biscuits = caseOrange + 1;)
                                      ^